--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -92,7 +92,7 @@ block content
             .input-message(data-input-message)
             .requaired-block-ico.requaired-block-ico--position
               +svg('requaired')
-
+            .mask-absolute.js-mask-absolute
           
           .form-textarea
             .form-field-message Введіть ваше повідомлення
