--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -147,30 +147,63 @@
 }
 
 .home-section-contact{
-  padding: vw(170) vw(300);
+  padding: vh(170) vw(300);
   background: #F9F9F9;
   @include to(1440px){
     padding: 150px 120px;
-
+  }
+  @include to(1024px){
+    padding: 120px 22px;
+  }
+  @include to(576px){
+    padding: 60px 22px;
   }
 }
 
 .contact-block {
   display: flex;
   align-items: flex-start;
+  @include to(576px){
+    flex-direction: column;
+  }
   &__l{
     padding-bottom: vw(40);
     border-right: 1px solid #E8E8E8;
+    padding-right: 40px;
     @include to(1440px){
       padding-bottom: 40px;
-
     }
-
+    @include to(1024px) {
+      padding-right: 60px;
+    }
+    @include to(600px) {
+      padding-right: 30px;
+    }
+    @include to(576px){
+      border-right: none;
+      padding-right: 0px;
+      padding-bottom: 30px;
+    }
+  }
+  &__r {
+    padding-left: 40px;
+    @include to(1024px) {
+      padding-left: 60px;
+    }
+    @include to(600px) {
+      padding-left: 30px;
+    }
+    @include to(576px) {
+      padding-left: 0px;
+    }
   }
 
   &__l,
   &__r {
     width: 50%;
+    @include to(576px){
+      width: 100%;
+    }
   }
 }
 
@@ -179,20 +212,35 @@
   margin-bottom: vw(40);
   @include to(1440px){
     margin-bottom: 40px;
-
   }
+  @include to(576px){
+    
+    margin-bottom: 30px;
+  }
+  
   &__label{
     font-size: max(vh(32), 32px);
-    ;
     line-height: 100%;
 
     text-transform: uppercase;
 
     color: #000000;
     margin: 0 0 vw(20) 0px;
+    @media (-webkit-min-device-pixel-ratio: 2) and (min-width:1440px) {
+      font-size: max(vh(32, 0.85), 32px);
+      font-weight: 300;
+    }
+    @media (-webkit-min-device-pixel-ratio: 2) and (max-width:1440px) {
+      font-size: max(vh(32), 32px);
+      font-weight: 400;
+
+    }
     @include to(1440px){
       margin: 0 0 20px 0px;
       font-size: 18px;
+    }
+    @include to(576px){
+      font-size: 16px;
     }
   }
   &__adress{
@@ -201,11 +249,19 @@
     line-height: 150%;
     color: #000000;
     margin: 0 0 vw(20) 0px;
+    
     @include to(1440px){
       font-size: 24px;
       margin: 0 0 20px 0px;
+    }
+    @include to(1024px){
+      font-size: 18px;
+    }
+    @include to(576px){
+      font-size: 14px;
 
     }
+
   }
 }
 
@@ -213,14 +269,42 @@
   margin-bottom: vw(40);
   @include to(1440px){
     margin-bottom: 40px;
+  }
+  @include to(576px){
+    margin-bottom: 30px;
 
+  }
+}
+.form-btn-wrap{
+  @include to(1024px){
+    flex-direction: column;
+    .requaired-block{
+      align-self: flex-start;
+      margin-bottom: 10px;
+    }
+    .main-button{
+      align-self: flex-end;
+    }
+    .requaired-block__text{
+      br{
+        display: none;
+      }
+    }
   }
 }
 
 .contact-schedule{
   display: flex;
   justify-content: space-between;
+  @include to(1024px){
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
   &-l{
+    @include to(1024px){
+      margin-bottom: 10px;
+    }
     a{
       font-size: max(vh(18), 18px);
       ;
@@ -230,6 +314,9 @@
       @include to(1440px){
         font-size: 18px;
       }
+      @include to(576px){
+        font-size: 14px;
+      }
     }
   }
   &__time{
@@ -237,9 +324,11 @@
     li{
       display: flex;
       font-size: max(vh(16), 16px);
-      ;
       line-height: 170%;
       color: #646464;
+      @media (-webkit-min-device-pixel-ratio: 2) and (min-width:1440px){
+        font-size: vw(16);
+      }
       @include to(1440px){
         font-size: 12px;
       }
@@ -253,9 +342,21 @@
 
     color: #000000;
     margin: 0 0 vw(20) 0px;
+    @media (-webkit-min-device-pixel-ratio: 2) and (min-width:1440px) {
+      font-size: max(vh(32, 0.85), 32px);
+      font-weight: 300;
+    }
+    @media (-webkit-min-device-pixel-ratio: 2) and (max-width:1440px) {
+          font-size: max(vh(32), 32px);
+          font-weight: 400;
+
+    }
     @include to(1440px) {
       margin: 0 0 20px 0px;
       font-size: 18px;
+    }
+    @include to(576px) {
+      font-size: 16px;
     }
   }
 }
