--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -51,10 +51,10 @@ html(lang="uk")
 		block header
 		// END HEADER
 		.page__inner(data-scroll-container)
-			.page__content
+			.page__content(data-scroll-section)
 				block content
 
-			.page__footer-wrapper
+			.page__footer-wrapper(data-scroll-section)
 				// START FOOTER
 				block footer
 				// END FOOTER
