--- a/src/assets/styles/pages/about.scss
+++ b/src/assets/styles/pages/about.scss
@@ -1,3 +1,12 @@
+body[id*='about']{
+  @include from(1680px){
+    .info-list-item span {
+      font-size: 18px;
+      line-height: 1.6em;
+    }
+  }
+}
+
 .subtitle-with-vertical-decor {
     --decor-width: 46px;
     border: 1px solid #DBDBDB;
@@ -12,6 +21,9 @@
     background-size: var(--decor-width) auto;
     background-position-x: -1px;
     background-position-y: -1px;
+    @include from(1680px){
+      padding-right: 15%;
+    }
 }
 
 .about-double-side-block {
@@ -55,6 +67,13 @@
         border-bottom: 1px solid #DBDBDB;
         border-left: 1px solid #DBDBDB;
         border-right: 1px solid #DBDBDB;
+    }
+    @include from(1680px){
+      &__left{
+        .subtitle-with-vertical-decor {
+          max-width:450px;
+        }
+      }
     }
     @include to(1240px){
       .info-list-item {
@@ -208,6 +227,10 @@
     &>*:nth-child(odd) {
         margin-right: 100px;
     }
+    @include from(1680px){
+      font-size: 18px;
+      line-height: 1.6em;
+    }
 }
 
 .about-block-renovations {
@@ -289,6 +312,10 @@
         padding-left: 5%;
         padding-right: 5%;
       }
+      &>.subtitle-with-vertical-decor:nth-child(odd) {
+        margin-left: calc(var(--decor-width) * -1);
+        padding-left: calc(var(--decor-width) + 5%);
+    }
     }
     @include to(1024px){
       &>.subtitle-with-vertical-decor {
@@ -363,13 +390,15 @@
     }
     @include to(1024px){
       grid-template-columns: 50% 50%;
+      grid-template-rows: auto;
       .info-list-item {
         padding-left: 5%;
         padding-right: 5%;
       }
       &:nth-child(odd) {
-          // background-color: red;
-          grid-template-columns: 50% 50%;
+        // background-color: red;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto;
       }
     }
 }
@@ -399,6 +428,8 @@
             width: 33.33333%;
             padding-left: 5%;
             padding-right: 5%;
+            padding-top: 15px;
+            padding-bottom: 15px;
             text-align: center;
             border: 1px solid #DBDBDB;
             height: 100%;
@@ -463,7 +494,11 @@
     }
     @include from(1680px){
       grid-template-columns: 200px 1fr 1fr 1fr 1fr 200px;
-      grid-template-rows: 15% 70% 15%;
+      grid-template-rows: 17.5% 65% 17.5%;
+      &__text {
+        font-size: 18px;
+        line-height: 1.6em;
+      }
     }
     @include to(1024px){
       background-image: none;
