--- a/src/pug/components/map/map.scss
+++ b/src/pug/components/map/map.scss
@@ -128,17 +128,34 @@
       stroke:#fff;
     }
   }
+  @include from-to(576px,950px){
+    &__legend {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 20px;
+    }
+  }
   @include to(950px){
     padding: 0 var(--self-vertical-padding) var(--self-side-padding) 0;
+    --self-side-padding: 20px;
+    min-height: calc(100vh - var(--header-h));
   }
+
   @include to(575px){
     // min-width: 100vw;
-    min-height: 100vh;
+    --self-side-padding:14px;
+    --markers-side-padding:20px;
+    min-height: calc(100vh - var(--header-h));
     &__legend {
       position: absolute;
       bottom: 0;
       left: 0;
-      width: 100%;
+      width: 270px;
+    }
+    &__legend-marker {
+      padding-top: 8px;
+      padding-bottom: 8px;
     }
     &__legend-markers-wrap{
       transform: scaleY(0);
@@ -149,20 +166,32 @@
       height: auto;
     }
     &__legend &__legend-title:after {
-        content: "↑";
+        content: "";
+        margin-left: auto;
+        display: inline-block;
+        width: 13px;
+        height: 8px;
+        background-image: url("data:image/svg+xml,%3Csvg width='13' height='8' viewBox='0 0 13 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.8 1.18921L6.39999 6.00012L0.99999 1.18921' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+        position: absolute;
+        right: 30px;
+        top: 50%;
+        transform: translateY(-50%) rotate(0.5turn);
+    }
+    &__legend.opened &__legend-title:after {
+        content: "";
+        display: inline-block;
+        width: 13px;
+        height: 8px;
+        background-image: url("data:image/svg+xml,%3Csvg width='13' height='8' viewBox='0 0 13 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.8 1.18921L6.39999 6.00012L0.99999 1.18921' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
         margin-left: auto;
         position: absolute;
         right: 30px;
         top: 50%;
         transform: translateY(-50%);
     }
-    &__legend.opened &__legend-title:after {
-        content: "x";
-        margin-left: auto;
-        position: absolute;
-        right: 30px;
-        top: 50%;
-        transform: translateY(-50%);
+    &__legend-title {
+      padding-top: 14px;
+      padding-bottom: 14px;
     }
   }
 }
