developer page ad

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -237,4 +237,5 @@
 @import './pages/sfera.scss';
 @import './pages/gallery.scss';
 @import './pages/about.scss';
+@import './pages/developer.scss';
 
