--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -102,8 +102,15 @@ body {
         display: none;
     }
     @include to(575px) {
+        li {
+          margin-bottom: 10px;
+        }
         li:nth-last-child(n+2) {
             margin-bottom: 10px;
+        }
+        li:before {
+          margin-right: 15px;
+          margin-left: 5px;
         }
     }
 }
@@ -169,4 +176,62 @@ body {
 .icon--yellow-square {
     width: 50px;
     height: 50px;
+}
+
+
+.icon-title-decor {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  margin-bottom: -1px;
+  &.capitalize {
+    text-transform: capitalize;
+  }
+  &.icon-title-decor--no-decor .decor {
+    display: none;
+  }
+  svg {
+    width:80px;
+    height: 50px;
+    padding-right: 30px;
+  }
+  .subtitle{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding-right: 80px;
+  }
+  .decor {
+    background: url(../images/ctc/icon-title-decor-bg.svg) right;
+     background-size: auto 50px;
+     background-position-x: right;
+     height: 50px;
+     flex-grow: 1;
+      border-left: 1px solid #DBDBDB;
+  }
+  @include to(950px){
+    .subtitle {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    svg {
+      width:50px;
+      padding-right:0;
+    }
+  }
+  @include to(575px){
+    align-items: flex-start;
+    margin-bottom: 15px;
+    .subtitle {
+      width: calc(100% - 50px);
+      align-self: center;
+      padding-left: 20px;
+    }
+    .decor {
+      align-self: flex-end;
+      width: 50px;
+      display: none;
+    }
+  }
+  
 }
