--- a/src/pug/components/seo-block/seo-block.scss
+++ b/src/pug/components/seo-block/seo-block.scss
@@ -6,6 +6,7 @@
   padding-bottom: 70px;
   padding-left: 20%;
   padding-right: 20%;
+  background: #fff;
   &__decor {
     position: absolute;
     left: 0;
@@ -43,7 +44,7 @@
     z-index: 2;
     transition: opacity .5s ease-in;
     pointer-events: none;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f9f9f9 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
   }
   &.opened &__text:after {
     opacity: 0;
@@ -68,8 +69,11 @@
     margin-right: auto;
   }
   @include to(575px){
-      padding-left: 0%;
-      padding-right: 0%;
+      padding-left: 14px;
+      padding-right: 14px;
+      &__text {
+        font-size: 14px;
+      }
   }
 
 }
