--- a/src/pug/includes/mixins.pug
+++ b/src/pug/includes/mixins.pug
@@ -66,7 +66,7 @@ mixin seoBlock(title,text)
       +btn('Читати далі')(data-seo-read-more data-text-when-opened="Згорнути" data-text-when-closed="Читати далі")
 
 mixin iconTitleDecor(figureColor,title)
-  .icon-title-decor
+  .icon-title-decor&attributes(attributes)
       +svg('figure-'+figureColor)
       .subtitle.bold.black #{title}
       .decor
