build progress start

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -238,4 +238,5 @@
 @import './pages/gallery.scss';
 @import './pages/about.scss';
 @import './pages/developer.scss';
+@import './pages/build-progress.scss';
 
