--- a/src/assets/styles/pages/ctc.scss
+++ b/src/assets/styles/pages/ctc.scss
@@ -61,6 +61,7 @@
   --decor-size:150px;
   line-height: 1.7em;
   font-size: 18px;
+  background-color: #fff;
   .list-std {
     font-size: 12px;
   }
