--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -165,3 +165,117 @@
     }
   }
 }
+
+
+.build-card {
+  // max-width: 320px;
+  --decor-size:45px;
+  --side-padding:30px;
+  --vert-padding:18px;
+  padding-right: var(--decor-size);
+  background-image: url(../images/build-progress/card-bg.svg);
+  background-position: calc(100% + 1px) -1px;
+  background-repeat: repeat-y;
+  border: 1px solid #DBDBDB;
+  &__img {
+
+  }
+  &__text-s {
+
+    font-size: 10px;
+    line-height: 1em;
+    /* identical to box height, or 10px */
+    color: #5B758D;
+  }
+  &__title{
+      padding: var(--vert-padding) var(--side-padding);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &__link{
+      padding: var(--vert-padding) var(--side-padding);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  }
+  &__img-fixed-proportions {
+    position: relative;
+    padding-bottom: calc(100% / 390 * 270);
+    img {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.build-progress-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  --gap:36px;
+  max-width: 900px;
+  margin: 0 auto;
+  &>*:nth-last-child(n+2){
+    margin-bottom: var(--gap);
+  }
+  &>*{
+    width: 100%;
+  }
+  &>*:nth-child(n+2):not(.pagination){
+    width: calc(50% - (var(--gap) / 2));
+  }
+}
+
+
+.pagination-digit {
+  --size:50px;
+  background-color: #fff;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  transition: .3 ease-in-out;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @include from(769px){
+    &:hover {
+      background-color: var(--color-architecture);
+    }
+  }
+}
+
+.pagination {
+  --gap:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  &>*:nth-child(n+2){
+    margin-left: var(--gap);
+  }
+}
+
+.absolute-link {
+  position: absolute;
+  right: var(--header-h);
+  top: calc(60px + var(--header-h));
+  text-decoration: none;
+  &__title{
+    font-size: 10px;
+    line-height: 140%;
+    margin-left: 20px;
+    margin-right: 10px;
+    margin-top: 10px;
+    max-width: 55px;
+    /* or 14px */
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+  }
+}
