build-progress popup functionality add

--- a/src/pug/pages/build-progress.pug
+++ b/src/pug/pages/build-progress.pug
@@ -42,6 +42,7 @@ block head
 block scripts
   script(defer src='./assets/scripts/vendors.bundle.js')
   script(defer src='./assets/scripts/index.bundle.js')
+  script(defer src='./assets/scripts/libs.js')
   script(defer src='./assets/scripts/index.js')
   script(defer src='./assets/scripts/build-progress.js')
 block content
@@ -73,7 +74,7 @@ block content
                   <circle cx="36.5" cy="36.5" r="36" stroke="#0165FB"/>
                   </svg>
       each val in testCards
-        .build-card
+        .build-card(data-progress-gallery data-month="1" data-build-popup="1" data-year="2020" data-images="https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/10_lesnaya-skazka2_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/3_klubniy2_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/12_lesnaya-skazka1_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/13_britanika_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/14_irpenskie-lipki_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/15_parkoviy_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/1_Riverside_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/5_naykraschiy1_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/6_proreznaya-2_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/7_proreznaya-1_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/8_Royal-Park_1600h1200px.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/naykraschiy2.jpg~https://idealist-wp.smarto.agency/wp-content/uploads/2020/12/Poltavskaya64.jpg")
           .build-card__title
             +iconTitleDecor('red','Вересень')(class="icon-title-decor--no-decor")
             .build-card__text-s 14 фото
@@ -97,7 +98,69 @@ block content
           </svg>
   .page-part
     +seoBlock('SEO текст для зразку','Итальянские дизайнеры, с которыми мы сотрудничаем, разработали четыре ключевых направления, которые будут использоваться в оформлении апартаментов. В своих проектах они вдохновлялись творчеством всемирно известных художников. Часть из них тесно связана с Украиной. Это Василий Кандинский, Казимир Малевич и Энди Уорхол. Мы позаботились о том, чтобы избавить жителей SAGA City Space от лишних хлопот. Именно')
-
+  .build-gallery-popup(data-build-gallery-popup)
+    <svg width="133" height="50" viewBox="0 0 133 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M0.0234375 4.89717L0.0234375 27.389L22.3583 27.389L22.3583 4.89717L0.0234375 4.89717Z" fill="#02996D"/>
+      <path d="M22.3681 27.4099H0.0332031V49.9017H22.3681V27.4099Z" fill="#FDC60C"/>
+      <path d="M22.334 27.4099V49.8689H44.6689L22.334 27.4099Z" fill="black"/>
+      <path d="M37.2456 27.4099C43.4132 27.4099 48.413 22.3749 48.413 16.164C48.413 9.95305 43.4132 4.91809 37.2456 4.91809C31.078 4.91809 26.0781 9.95305 26.0781 16.164C26.0781 22.3749 31.078 27.4099 37.2456 27.4099Z" fill="#EA4041"/>
+      <path d="M22.3349 27.4103C22.3349 14.984 12.3395 4.91846 0 4.91846V27.4103H22.3349Z" fill="#0065FB"/>
+      <path d="M85.5954 3.80328C86.6383 3.80328 87.4838 2.95189 87.4838 1.90164C87.4838 0.851394 86.6383 0 85.5954 0C84.5525 0 83.707 0.851394 83.707 1.90164C83.707 2.95189 84.5525 3.80328 85.5954 3.80328Z" fill="black"/>
+      <path d="M89.9255 3.80328C90.9684 3.80328 91.8139 2.95189 91.8139 1.90164C91.8139 0.851394 90.9684 0 89.9255 0C88.8826 0 88.0371 0.851394 88.0371 1.90164C88.0371 2.95189 88.8826 3.80328 89.9255 3.80328Z" fill="black"/>
+      <path d="M59.5814 4.91803H63.2279V11.4098H63.2605L67.2977 4.91803H71.1395L66.386 12.1311L71.4326 19.377H67.1349L63.2279 13.1475H63.1953V19.377H59.5488V4.91803H59.5814Z" fill="black"/>
+      <path d="M79.8661 14.0984V19.3443H76.2196V14.0984L71.9219 4.91803H75.894L78.0103 10.7213L80.1591 4.91803H84.0986L79.8661 14.0984Z" fill="black"/>
+      <path d="M85.9531 4.91803H89.5996V19.3443H85.9531V4.91803Z" fill="black"/>
+      <path d="M100.051 19.3443H96.2743L91.4883 4.91803H95.2325L98.1301 15.0492H98.1627L101.06 4.91803H104.837L100.051 19.3443Z" fill="black"/>
+      <path d="M68.8605 32.8525C67.6232 33.9344 66.2884 34.0984 64.6605 34.0984H63.0651V38.6229H59.5488V24.1967H64.2372C65.7023 24.1967 67.4605 24.2623 68.6651 25.2459C69.8046 26.1967 70.3581 27.5738 70.3581 29.082C70.3907 30.3934 69.8698 31.9344 68.8605 32.8525ZM64.4651 27.4098H63.0977V30.8525H64.5953C65.8 30.8525 66.8744 30.5902 66.8744 29.1147C66.8744 27.6066 65.6698 27.4098 64.4651 27.4098Z" fill="black"/>
+      <path d="M78.9205 38.6229L75.5996 33.9672H75.5671V38.6229H72.0508V24.1967H76.5764C78.074 24.1967 79.7671 24.2295 81.0043 25.2459C82.1764 26.1967 82.7624 27.6721 82.7624 29.1803C82.7624 31.4098 81.4601 33.3443 79.2136 33.7377L83.1205 38.6557H78.9205V38.6229ZM76.9019 27.4098H75.5671V31.4426H76.8694C78.2368 31.4426 79.2787 30.8524 79.2787 29.377C79.2461 27.9344 78.1392 27.4098 76.9019 27.4098Z" fill="black"/>
+      <path d="M91.6186 38.8853C87.5814 38.8853 84.0977 35.7377 84.0977 31.5738C84.0977 30.4918 84.2604 29.4754 84.6511 28.4918C84.8791 27.9344 85.2046 27.3443 85.5953 26.8853C87.0604 24.9181 89.2093 23.9344 91.6511 23.9344C95.8512 23.9344 99.2372 27.1803 99.2372 31.4426C99.2046 35.6722 95.8186 38.8853 91.6186 38.8853ZM91.6511 27.1476C89.307 27.1476 87.7442 29.1148 87.7442 31.3771C87.7442 33.6722 89.307 35.6722 91.6837 35.6722C93.9953 35.6722 95.5256 33.6394 95.5256 31.4426C95.5581 29.1803 93.9953 27.1476 91.6511 27.1476Z" fill="black"/>
+      <path d="M100.605 38.6229V24.1967H108.582V27.4426H104.122V29.6721H108.452V32.918H104.122V35.4098H108.582V38.6557H100.605V38.6229Z" fill="black"/>
+      <path d="M118.609 38.6229L114.702 32.3934H114.669V38.6229H110.99V24.1967H114.637V30.6885H114.669L118.707 24.1967H122.548L117.795 31.4098L122.841 38.6557H118.609V38.6229Z" fill="black"/>
+      <path d="M130.167 27.4098V38.623H126.52V27.4098H123.688V24.1639H132.999V27.4098H130.167Z" fill="black"/>
+      <path d="M60.4937 49.1148C59.8751 48.5246 59.582 47.8033 59.582 46.8853C59.582 45.9672 59.8751 45.2459 60.4937 44.6557C61.1123 44.0656 61.8611 43.8033 62.7727 43.8033C63.3588 43.8033 63.8797 43.9344 64.3355 44.1639V45.3771C63.8797 45.082 63.3588 44.918 62.8053 44.918C62.2518 44.918 61.796 45.1148 61.4053 45.4754C61.0471 45.8361 60.8518 46.2951 60.8518 46.8525C60.8518 47.4098 61.0471 47.8689 61.4378 48.2623C61.8285 48.623 62.2844 48.7869 62.8704 48.7869C63.5216 48.7869 64.0425 48.623 64.4658 48.2623V49.4754C63.9774 49.7705 63.4239 49.9016 62.8053 49.9016C61.8285 50 61.0797 49.7049 60.4937 49.1148Z" fill="black"/>
+      <path d="M66.7769 43.9672H65.5723V49.8689H66.7769V43.9672Z" fill="black"/>
+      <path d="M67.8184 43.9672H72.7346V45.0492H70.8788V49.8689H69.6742V45.0492H67.8184V43.9672Z" fill="black"/>
+      <path d="M75.406 49.8689V47.2131L73.127 43.9672H74.5595L75.9921 46.0656L77.4897 43.9672H78.8572L76.6107 47.1803V49.8689H75.406Z" fill="black"/>
+      <path d="M81.5918 49.3443V48.0656C81.8197 48.2623 82.1453 48.459 82.5685 48.6229C82.9918 48.7869 83.3825 48.8525 83.7732 48.8525C84.4244 48.8525 84.9127 48.6229 84.9127 48.1639C84.9127 47.9672 84.8151 47.7705 84.6197 47.6721C84.522 47.6066 84.4569 47.5738 84.2941 47.5082L84.0988 47.4426L83.643 47.3115L83.2197 47.1803C83.122 47.1475 82.9918 47.1147 82.829 47.0492C82.6662 46.9836 82.536 46.918 82.4383 46.8852C82.2755 46.7869 81.9825 46.5574 81.8848 46.3606C81.7871 46.1639 81.6895 45.8688 81.6895 45.541C81.6895 45.0164 81.8848 44.5902 82.2755 44.2951C82.6662 44 83.2197 43.8361 83.9034 43.8361C84.5871 43.8361 85.2383 44 85.8244 44.3279V45.5082C85.2383 45.1475 84.5871 44.9508 83.9034 44.9508C83.2523 44.9508 82.8941 45.1475 82.8941 45.541C82.8941 45.7377 83.0244 45.8688 83.2197 45.9344C83.3174 46 83.5453 46.0656 83.7081 46.0984C83.8709 46.1311 84.1639 46.2295 84.3592 46.2951C84.9127 46.459 85.2383 46.6229 85.629 46.918C86.0197 47.2131 86.2151 47.6066 86.2151 48.1639C86.2151 48.7213 85.9872 49.1803 85.5639 49.5082C85.1081 49.8361 84.5546 50 83.9034 50C82.9267 50 82.2104 49.7705 81.5918 49.3443Z" fill="black"/>
+      <path d="M87.2246 49.8689V43.9672H89.7967C90.4153 43.9672 90.9362 44.1312 91.2944 44.459C91.6525 44.7869 91.8479 45.2131 91.8479 45.7377C91.8479 46.2623 91.6525 46.6885 91.2944 47.0164C90.9362 47.3443 90.4153 47.5082 89.7967 47.5082H88.4293V49.8361H87.2246V49.8689ZM88.4618 46.4918H89.7316C90.3176 46.4918 90.6432 46.2295 90.6432 45.7705C90.6432 45.3115 90.2851 45.0492 89.7316 45.0492H88.4618V46.4918Z" fill="black"/>
+      <path d="M91.75 49.8689L94.257 43.9344H95.4291L97.936 49.8689H96.6663L96.0802 48.4918H93.6058L93.0198 49.8689H91.75ZM93.964 47.5082H95.6895L94.843 45.4426L93.964 47.5082Z" fill="black"/>
+      <path d="M99.1069 49.1148C98.4883 48.5246 98.1953 47.8033 98.1953 46.8853C98.1953 45.9672 98.4883 45.2459 99.1069 44.6557C99.7255 44.0656 100.474 43.8033 101.386 43.8033C101.972 43.8033 102.493 43.9344 102.949 44.1639V45.3771C102.493 45.082 101.972 44.918 101.419 44.918C100.865 44.918 100.409 45.1148 100.019 45.4754C99.6604 45.8361 99.4651 46.2951 99.4651 46.8525C99.4651 47.4098 99.6604 47.8689 100.051 48.2623C100.442 48.623 100.898 48.7869 101.484 48.7869C102.135 48.7869 102.656 48.623 103.079 48.2623V49.4754C102.591 49.7705 102.037 49.9016 101.419 49.9016C100.442 50 99.693 49.7049 99.1069 49.1148Z" fill="black"/>
+      <path d="M104.154 49.8689V43.9672H108.485V45.0492H105.359V46.1967H107.866V47.2459H105.359V48.7869H108.582V49.8689H104.154Z" fill="black"/>
+      </svg>
+    .build-gallery-popup-close(data-build-popup-close data-build-popup) 
+        span Закрити
+        <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 50H50V0H0V50Z" fill="#CFBE97"/>
+            <path d="M30 30L20 20M20 30L30 20L20 30Z" stroke="white"/>
+            </svg>
+    .build-gallery-popup__wrap-title
+        .build-gallery-popup__title(data-popup-title) Місяц
+        .build-gallery-popup__text(data-popup-subtitle) 2020
+    .build-gallery-popup__img-view(data-swiper-big-image)
+        .loader
+        img(alt="#" src="./assets/images/build-progress/test/test1.jpg" data-swiper-current-img-view)
+    .prev-gallery(data-popup-prev-gallery)
+        <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20 9L2 9M2 9L9.66667 17M2 9L9.66667 1" stroke="white" stroke-width="2"/>
+            </svg>
+        span Попередній звіт
+    .next-gallery(data-popup-next-gallery)
+        <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20 9L2 9M2 9L9.66667 17M2 9L9.66667 1" stroke="white" stroke-width="2"/>
+            </svg>
+        span Наступний звіт
+    .build-gallery-popup__wrap-nav
+        <svg class="arrow-prev" width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 9.00195L0.999999 9.00195M0.999999 9.00195L8.66667 17.002M0.999999 9.00195L8.66667 1.00195" stroke="#CFBE97"/>
+            </svg>
+        .build-gallery-popup__img-slider( data-swiper-slider)
+            .swiper-wrapper
+                - var imgs = ['Rectangle 3340.jpg','Rectangle 3341.jpg','Rectangle 3342.jpg','Rectangle 3343.jpg','Rectangle 3344.jpg','Rectangle 3345.jpg','Rectangle 3346.jpg','Rectangle 3347.jpg',]
+                    each img in imgs 
+                        img(alt="#" src='./assets/images/build-progress/test/'+img).swiper-slide
+        <svg class="arrow-next" width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.99382e-07 9.00195L18 9.00195M18 9.00195L10.3333 17.002M18 9.00195L10.3333 1.00195" stroke="#CFBE97"/>
+            </svg>
 block footer
   include ../includes/footer.pug
 
