--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -279,3 +279,223 @@
     color: #000000;
   }
 }
+
+.build-gallery-popup {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    --self-side-padding:50px;
+    // overflow: scroll;
+    left: 0;
+    top: 0;
+    // background-color: $color-green;
+    z-index: 50;
+    padding: var(--self-side-padding);
+    visibility: hidden;
+    opacity: 0;
+    &__img-view {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: relative;
+            z-index: 2;
+        }
+        .loader {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+            animation: single2 4s infinite ease-in-out;
+        }
+        z-index: -1;
+    }
+    &__img-view:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 53.96%);
+        z-index: 5;
+    }
+    &__title {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 1em;
+        /* identical to box height, or 100% */
+        display: flex;
+        align-items: center;
+        letter-spacing: -0.05em;
+        /* White */
+        color: #FFFFFF;
+        margin-bottom: 10px;
+    }
+    &__text {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 1em;
+        /* identical to box height, or 100% */
+        text-transform: uppercase;
+        /* Gold */
+        color: #CFBE97;
+    }
+    &__img-slider {
+        height: 100px;
+        @include size(10);
+        display: flex;
+        position: absolute;
+        overflow: hidden;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: var(--self-side-padding);
+        transition: .3s ease-out;
+        img {
+            transition: .3s ease-out;
+            border: 2px solid transparent;
+            width: 100px;
+        }
+        img[class*=active] {
+            // border: 2px solid $color-gold;
+        }
+    }
+    .prev-gallery,
+    .next-gallery {
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 1.33em;
+        /* identical to box height, or 133% */
+        text-transform: uppercase;
+        /* White */
+        color: #FFFFFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        position: absolute;
+        top: calc(var(--header-height) + 50px);
+    }
+    .prev-gallery {
+        left: var(--self-side-padding);
+        svg {
+            margin-right: 10px;
+        }
+    }
+    .next-gallery {
+        svg {
+            transform: rotate(0.5turn);
+            margin-left: 10px;
+        }
+        flex-direction: row-reverse;
+        right: var(--self-side-padding);
+    }
+    &__wrap-nav {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: calc(100px + var(--self-side-padding));
+    }
+    &__wrap-nav>* {
+        transition: .3s ease-out;
+        transform: translateY(100px) translateX(-50%) !important;
+    }
+    &__wrap-nav:hover>* {
+        transform: translateX(-50%) !important;
+    }
+    &-close {
+        position: absolute;
+        right: var(--self-side-padding);
+        top: var(--self-side-padding);
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1em;
+        text-transform: lowercase;
+        /* identical to box height, or 14px */
+        text-align: right;
+        /* Text gold */
+        color: #E1DDD2;
+        cursor: pointer;
+        svg {
+            transition: transform .3s ease-out;
+        }
+        span {
+            margin-right: 10px;
+        }
+    }
+    &__wrap-title {
+        position: absolute;
+        left: 50%;
+        top: var(--self-side-padding);
+        transform: translateX(-50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .arrow-next {
+        position: absolute;
+        right: calc(8% - 20px);
+        transform: translateY(50%);
+        bottom: calc(var(--self-side-padding) + 50px);
+    }
+    .arrow-prev {
+        position: absolute;
+        transform: translateY(50%);
+        left: calc(8% - 20px);
+        bottom: calc(var(--self-side-padding) + 50px);
+    }
+    @include from(769px) {
+        &__img-slider img:hover {
+            cursor: pointer;
+            // border-color: $color-gold;
+        }
+        &-close:hover svg {
+            transform: rotate(0.5turn);
+        }
+    }
+    @include to(768px) {
+        &__wrap-nav>* {
+            transform: translateX(-50%) !important;
+        }
+    }
+    @include to(575px) {
+        &>svg {
+            width: 100px;
+        }
+        .prev-gallery,
+        .next-gallery {
+            font-size: 10px;
+        }
+        &__title {
+            font-size: 24px;
+        }
+        &-close svg {
+            height: 38px;
+            width: 38px;
+        }
+        &__wrap-nav {
+            height: calc(50px+var(--self-side-padding))
+        }
+        &__img-slider {
+            height: 50px;
+        }
+        &__img-slider img {
+            width: 50px;
+        }
+        .arrow-next,
+        .arrow-prev {
+            bottom: calc(var(--self-side-padding) + 25px);
+        }
+    }
+}
