--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -288,7 +288,7 @@
     // overflow: scroll;
     left: 0;
     top: 0;
-    // background-color: $color-green;
+    background: white;
     z-index: 50;
     padding: var(--self-side-padding);
     visibility: hidden;
@@ -316,28 +316,15 @@
         }
         z-index: -1;
     }
-    &__img-view:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 53.96%);
-        z-index: 5;
-    }
     &__title {
-        font-style: normal;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 1em;
-        /* identical to box height, or 100% */
+        
+        font-size: 24px;
+        line-height: 1.2em;
+        text-align: center;
+        /* /black */
+        color: #000000;
         display: flex;
         align-items: center;
-        letter-spacing: -0.05em;
-        /* White */
-        color: #FFFFFF;
-        margin-bottom: 10px;
     }
     &__text {
         font-weight: 500;
@@ -349,19 +336,20 @@
         color: #CFBE97;
     }
     &__img-slider {
-        height: 100px;
-        @include size(10);
+        height: 60%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
         display: flex;
         position: absolute;
         overflow: hidden;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: var(--self-side-padding);
         transition: .3s ease-out;
+        width: 80%;
+        z-index: -1;
         img {
-            transition: .3s ease-out;
-            border: 2px solid transparent;
-            width: 100px;
+            // transition: .3s ease-out;
+            // border: 2px solid transparent;
+            // width: 100px;
         }
         img[class*=active] {
             // border: 2px solid $color-gold;
@@ -369,19 +357,15 @@
     }
     .prev-gallery,
     .next-gallery {
-        font-weight: bold;
-        font-size: 12px;
-        line-height: 1.33em;
-        /* identical to box height, or 133% */
-        text-transform: uppercase;
-        /* White */
-        color: #FFFFFF;
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 12px;
+        line-height: 100%;
+        /* identical to box height, or 12px */
+        text-align: right;
+        color: #000000;
         cursor: pointer;
-        position: absolute;
-        top: calc(var(--header-height) + 50px);
     }
     .prev-gallery {
         left: var(--self-side-padding);
@@ -402,14 +386,9 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        height: calc(100px + var(--self-side-padding));
-    }
-    &__wrap-nav>* {
-        transition: .3s ease-out;
-        transform: translateY(100px) translateX(-50%) !important;
-    }
-    &__wrap-nav:hover>* {
-        transform: translateX(-50%) !important;
+        height: 100%;
+        pointer-events: none;
+        
     }
     &-close {
         position: absolute;
@@ -427,9 +406,15 @@
         color: #E1DDD2;
         cursor: pointer;
         svg {
-            transition: transform .3s ease-out;
+          transition: transform .3s ease-out;
         }
         span {
+            font-size: 10px;
+            line-height: 1em;
+            /* identical to box height, or 10px */
+            text-align: right;
+            text-transform: uppercase;
+            color: #000000;
             margin-right: 10px;
         }
     }
@@ -444,16 +429,28 @@
         flex-direction: column;
     }
     .arrow-next {
-        position: absolute;
+        // position: absolute;
         right: calc(8% - 20px);
-        transform: translateY(50%);
         bottom: calc(var(--self-side-padding) + 50px);
     }
     .arrow-prev {
-        position: absolute;
-        transform: translateY(50%);
+        // position: absolute;
+        transform: rotate(0.5turn);
         left: calc(8% - 20px);
         bottom: calc(var(--self-side-padding) + 50px);
+    }
+
+    &__arrow-counter-wrap {
+      position: absolute;
+      left: 50%;
+      bottom: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transform: translate(-50%,-50%);
+      &>*:nth-child(n+2){
+        margin-left: 30px;
+      }
     }
     @include from(769px) {
         &__img-slider img:hover {
